@@ -1,29 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2024/04/30 14:25:01 wiz Exp $
-${PYSITELIB}/${WHEEL_INFODIR}/METADATA
-${PYSITELIB}/${WHEEL_INFODIR}/RECORD
-${PYSITELIB}/${WHEEL_INFODIR}/WHEEL
-${PYSITELIB}/${WHEEL_INFODIR}/top_level.txt
-${PYSITELIB}/exam/__init__.py
-${PYSITELIB}/exam/__init__.pyc
-${PYSITELIB}/exam/__init__.pyo
-${PYSITELIB}/exam/asserts.py
-${PYSITELIB}/exam/asserts.pyc
-${PYSITELIB}/exam/asserts.pyo
-${PYSITELIB}/exam/cases.py
-${PYSITELIB}/exam/cases.pyc
-${PYSITELIB}/exam/cases.pyo
-${PYSITELIB}/exam/decorators.py
-${PYSITELIB}/exam/decorators.pyc
-${PYSITELIB}/exam/decorators.pyo
-${PYSITELIB}/exam/fixtures.py
-${PYSITELIB}/exam/fixtures.pyc
-${PYSITELIB}/exam/fixtures.pyo
-${PYSITELIB}/exam/helpers.py
-${PYSITELIB}/exam/helpers.pyc
-${PYSITELIB}/exam/helpers.pyo
-${PYSITELIB}/exam/mock.py
-${PYSITELIB}/exam/mock.pyc
-${PYSITELIB}/exam/mock.pyo
-${PYSITELIB}/exam/objects.py
-${PYSITELIB}/exam/objects.pyc
-${PYSITELIB}/exam/objects.pyo
